# replicode

./: .travis.yml  CMakeLists.txt  LICENSE.txt  Makefile  README.md  Replicode.sln  TODO  compatibility.cpp  compatibility.h  jobs.rtf  rMem design.rtf  replicode_common.h
CoreLibrary/: CMakeLists.txt  CoreLibrary.vcproj  Makefile  base.cpp  base.h  base.tpl.cpp  debug.h  dll.h  inifile.cpp  inifile.h  pipe.h  pipe.tpl.cpp  sharedlibrary.cpp  sharedlibrary.h  types.h  utils.cpp  utils.h  utils.tpl.cpp  xml_parser.cpp  xml_parser.h
CorrelatorTest/: CorrelatorTest.cpp  CorrelatorTest.vcproj  correlator.h  settings.h  settings.xml
Integration/: Integration.vcproj  integration.cpp  integration.h  io_register.cpp  io_register.h  io_register.tpl.cpp  loader_module.cpp  loader_module.h  r_mem.xml  r_mem_class.cpp  r_mem_class.h  r_mem_class_def.h  r_mem_module.cpp  r_mem_module.h  r_mem_module.tpl.cpp  r_mem_node.xml  replicode_class_def.h  replicode_classes.cpp  replicode_classes.h  replicode_classes.tpl.cpp  sample_io_module.cpp  sample_io_module.h  visualization_module.cpp  visualization_module.h
Test/: CMakeLists.txt  Makefile  Test.cpp  Test.vcproj  helgi.replicode  image_impl.cpp  image_impl.h  rgrp.user.classes.replicode  settings.h  settings.ini  settings.xml  std.replicode  test.1.replicode  test.10.replicode  test.11.replicode  test.12.replicode  test.13.replicode  test.14.replicode  test.15.replicode  test.16.replicode  test.17.replicode  test.18.replicode  test.19.replicode  test.2.replicode  test.20.replicode  test.21.replicode  test.22.replicode  test.23.replicode  test.24.replicode  test.25.replicode  test.26.replicode  test.3.replicode  test.4.replicode  test.5.replicode  test.6.replicode  test.7.replicode  test.8.replicode  test.9.replicode  test.helgi.replicode  test.integration.replicode  (+3 more)
Test/Correlator.Data.Generation/: motor.babbling.replicode  user.classes.replicode
Test/Demo1/: initial.HLP.replicode  main.replicode  sim.devices.replicode  std.replicode  test.1.replicode  user.classes.replicode
Test/V1.2/: drives.replicode  hello.world.replicode  main.replicode  pong.2.replicode  pong.replicode  std.replicode  test.1.replicode  test.2.replicode  test.3.replicode  test.4.replicode  user.classes.replicode
examples/: test.13.replicode  test.14.replicode  test.17.replicode  test.25.replicode  test.6.replicode  test.8.replicode  user.classes.replicode
examples/Correlator.Data.Generation/: user.classes.replicode
examples/V1.2/: pong.2.replicode  test.2.replicode  test.4.replicode  test.domain.replicode
examples/loom-visor/: rgrp.user.classes.replicode  settings.xml  std.replicode  (+1 more)
executor/: CMakeLists.txt  inifile.cpp  main.cpp  settings.h
output_window/: main.cpp  output_window.vcproj
r_code/: CMakeLists.txt  Makefile  atom.cpp  atom.h  atom.inline.cpp  base.cpp  base.h  base.tpl.cpp  execution_context.cpp  execution_context.h  expression.cpp  expression.h  image.cpp  image.h  image.tpl.cpp  image.tpl.h  image_impl.cpp  image_impl.h  list.h  object.cpp  object.h  operator.cpp  operator.h  r_code.cpp  r_code.h  r_code.vcproj  reduction_instance.cpp  reduction_instance.h  replicode_defs.h  time_buffer.h  types.h  utils.cpp  utils.h  utils.tpl.cpp  vector.cpp  vector.h
r_comp/: CMakeLists.txt  Makefile  class.cpp  class.h  class_register.cpp  class_register.h  compiler.cpp  compiler.h  decompiler.cpp  decompiler.h  out_stream.h  preprocessor.cpp  preprocessor.h  r_comp.cpp  r_comp.h  r_comp.vcproj  replistruct.cpp  replistruct.h  segments.cpp  segments.h  string_utils.cpp  string_utils.h  structure_member.cpp  structure_member.h
r_exec/: Asynchronous.h  CMakeLists.txt  Core.h  CoreImpl.cpp  CoreImpl.h  ExecutionContext.cpp  ExecutionContext.h  Expression.cpp  Expression.h  Group.h  Makefile  Mem.h  MemImpl.cpp  MemImpl.h  Object.h  ObjectReceiver.h  OperatorRegister.cpp  OperatorRegister.h  Operators.cpp  Operators.h  ReductionInstance.cpp  ReductionInstance.h  SystemTest.cpp  _context.cpp  _context.h  ast_controller.cpp  ast_controller.h  ast_controller.tpl.cpp  ast_controller.tpl.h  auto_focus.cpp  auto_focus.h  binding_map.cpp  binding_map.h  black_list.cpp  black_list.h  callbacks.cpp  callbacks.h  context.cpp  context.h  cpp_programs.cpp  (+95 more)
r_exec/Debug/: BuildLog.htm  mt.dep  vc90.idb
r_exec/Release/: BuildLog.htm  mt.dep  vc90.idb
r_exec/mbrane_imports/: compat.h  utils.cpp  utils.h  utils.tpl.cpp
r_exec_legacy/: CoreImpl.h  ExecutionContext.cpp  Mem.h  MemImpl.cpp  Object.cpp  ObjectReceiver.h  ReductionInstance.h  fwd.h  hash_containers  r_exec_legacy.vcproj
rcore/: ExecutionContext.cpp  ExecutionContext.h  Makefile  OperatorRegister.cpp  OperatorRegister.h  assemble.pl  atoms  container.h  doTests.pl  initial_operators  match.cpp  match.h  opcodes.h  operator_add.cpp  operator_equ.cpp  operator_equ.h  operator_gte.cpp  operator_gtr.cpp  operator_lse.cpp  operator_lsr.cpp  operator_now.cpp  operator_red.cpp  operator_sub.cpp  print_expression.cpp  print_expression.h  r_code.h  r_core.cpp  r_core.h  r_listener.cpp  r_listener.h  std.replicode  std.replicode.rc1  std.replicode.v9  testCore.cpp  types.h
replicode/: std.replicode  test.10.replicode  test.11.replicode  test.15.replicode  test.16.replicode  test.21.replicode  test.23.replicode  test.5.replicode  test.pm.var.replicode  test.rgrp.1.replicode
trunk/: Replicode.sln
usr_operators/: CMakeLists.txt  auto_focus.cpp  auto_focus.h  correlator.h  types.h  usr_operators.cpp  usr_operators.h  usr_operators.vcproj
usr_operators/Callbacks/: callbacks.cpp  callbacks.h
usr_operators/Correlator/: CorrelatorCore.cpp  CorrelatorCore.h  ForwardLayer.cpp  ForwardLayer.h  LstmBlock.cpp  LstmBlock.h  LstmLayer.cpp  LstmLayer.h  LstmNetwork.cpp  LstmNetwork.h  VectorMath.h  correlator.cpp  correlator.h  usr_operators.cpp  winepi.cpp  winepi.h
usr_operators/Operators/: operators.cpp  operators.h
usr_operators/PatternDetector/: pattern_detector.cpp  pattern_detector.h
usr_operators/TestProgram/: test_program.cpp  test_program.h
usr_operators/Vec3/: vec3.cpp  vec3.h
(+62 files in other folders)
