set(r_exec_SRC
    _context.cpp
    ast_controller.cpp
    auto_focus.cpp
    binding_map.cpp
    callbacks.cpp
    context.cpp
    cpp_programs.cpp
    cst_controller.cpp
    domain.cpp
    factory.cpp
    g_monitor.cpp
    group.cpp
    guard_builder.cpp
    hlp_context.cpp
    hlp_controller.cpp
    hlp_overlay.cpp
    init.cpp
    mdl_controller.cpp
    mem.cpp
    model_base.cpp
    monitor.cpp
    object.cpp
    #object.tpl.cpp
    opcodes.cpp
    operator.cpp
    overlay.cpp
    p_monitor.cpp
    pattern_extractor.cpp
    pgm_controller.cpp
    pgm_overlay.cpp
    reduction_core.cpp
    reduction_job.cpp
    time_core.cpp
    time_job.cpp
    view.cpp
    )

add_library(r_exec SHARED ${r_exec_SRC})
