set(r_exec_SRC
    _context.cpp
    ast_controller.cpp
    auto_focus.cpp
    binding_map.cpp
    callbacks.cpp
    context.cpp
    cpp_programs.cpp
    cst_controller.cpp
    domain.cpp
    factory.cpp
    g_monitor.cpp
    group.cpp
    guard_builder.cpp
    hlp_context.cpp
    hlp_controller.cpp
    hlp_overlay.cpp
    init.cpp
    mdl_controller.cpp
    mem.cpp
    model_base.cpp
    monitor.cpp
    object.cpp
    opcodes.cpp
    operator.cpp
    overlay.cpp
    p_monitor.cpp
    pattern_extractor.cpp
    pgm_controller.cpp
    pgm_overlay.cpp
    reduction_core.cpp
    reduction_job.cpp
    time_core.cpp
    time_job.cpp
    view.cpp
    )
set(r_exec_HDR
    _context.h
    ast_controller.h
    ast_controller.tpl.h
    auto_focus.h
    binding_map.h
    callbacks.h
    context.h
    cpp_programs.h
    cst_controller.h
    domain.h
    factory.h
    g_monitor.h
    group.h
    guard_builder.h
    hlp_context.h
    hlp_controller.h
    hlp_overlay.h
    init.h
    mdl_controller.h
    mem.h
    mem.tpl.h
    model_base.h
    monitor.h
    object.h
    object.tpl.h
    opcodes.h
    operator.h
    overlay.h
    overlay.tpl.h
    p_monitor.h
    pattern_extractor.h
    pgm_controller.h
    pgm_overlay.h
    reduction_core.h
    reduction_job.h
    reduction_job.tpl.h
    time_core.h
    time_job.h
    view.h
    )

add_library(r_exec SHARED ${r_exec_SRC})
target_link_libraries(r_exec CoreLibrary)
set_property(TARGET r_exec PROPERTY CXX_STANDARD 11)
set_property(TARGET r_exec PROPERTY CXX_STANDARD_REQUIRED ON)
install(TARGETS r_exec DESTINATION lib)
install(FILES ${r_exec_HDR} DESTINATION include/r_exec)
